Included Bootstrap Files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,11 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.SL[/Browsers/webviewBrowser=true
+browser.highlightselection.SL[/Browsers/webviewBrowser=true
+browser.run=true
 file.reference.DistributedJava-public_html=public_html
 file.reference.DistributedJava-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.DistributedJava-public_html}
+start.file=index.html
 test.folder=${file.reference.DistributedJava-test}
+web.context.root=/DistributedJava
